[package]
name = "iron_tank"
version = "0.1.1"
authors = ["kanari"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
libc = "0.2.82"
tempfile = "3.2"
reqwest = { version = "0.11", features=["multipart", "blocking"] }
async-std = "1.9"
regex = "1"
select = "0.5"
actix-web = "3"

[workspace]
members = [
    "tank_cell",
]