[package]
name = "tank_client"
version = "0.1.0"
authors = ["Kanari <iovo7c@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2", features = ["macros", "full"] }
futures-util = "0.3.12"
tokio-amqp = "1.0.0"
lapin = "^1.6"