[package]
name = "tank_server"
version = "0.1.0"
authors = ["Kanari <iovo7c@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2", features = ["macros", "full"] }
tokio-amqp = "1.0.0"
lapin = "^1.6"
log = "^0.4"
env_logger = "0.8.2"